reserved/pwc-chuangxinzhongxin-k8s-yaml-config-reserved/identity-config/identity-api/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: identity
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: 10.157.112.207:5001/alpine:latest
        imagePullPolicy: Always
        resources: {}
      imagePullSecrets:
      - name: meinenghua
      nodeSelector: 
        node-tag: gpu-001
