reserved/pwc-chuangxinzhongxin-k8s-yaml-config-reserved/identity-config/identity-api/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-identity-api
  namespace: identity
spec:
  selector:
    app: deployment-identity-api
  ports:
    - protocol: TCP
      port: 5200
      targetPort: 5200
  type: ClusterIP
