reserved/pwc-chuangxinzhongxin-k8s-yaml-config-reserved/identity-config/identity-api/external.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-vprofile-service
  namespace: identity
spec:
  externalName: cnshaapppwv251.asia.pwcinternal.com
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ExternalName
