reserved/pwc-chuangxinzhongxin-k8s-yaml-config-reserved/identity-config/identity-api/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-identity-api
  namespace: identity
spec:
  selector:
    app: deployment-identity-api
  ports:
    - protocol: TCP
      nodePort: 31004
      port: 5200
      targetPort: 5200
  type: NodePort
